--- a/roles/promtail/vars/Debian.yml
+++ b/roles/promtail/vars/Debian.yml
@@ -1,5 +1,6 @@
 ---
 __promtail_arch_map:
   x86_64: 'amd64'
+  aarch64: 'arm64'
 
 __promtail_arch: "{{ __promtail_arch_map[ansible_architecture] | default(ansible_architecture) }}"
